fix: intercom cta visibility (#4235)

--- a/app/styles/components/global.scss
+++ b/app/styles/components/global.scss
@@ -11,8 +11,7 @@ body.ReactModal__Body--open {
 }
 
 .intercom-launcher-frame,
-.intercom-launcher-badge-frame,
-.intercom-launcher-discovery-frame {
+.intercom-lightweight-app-launcher {
   display: none !important;
 }
 
